<resources>
    <string name="app_name">Glowfy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title">Unlock Your Skin’s Potential and Discover Your Glow</string>
    <string name="dont_have_account">Don\'t have an account?\n</string>
    <string name="to_register"><u>Register</u></string>
    <string name="to_login"><u>Login</u></string>
    <string name="register">Register</string>
    <string name="have_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="clinic">Clinic</string>
    <string name="profile">Profile</string>
    <string name="cameraDesc">Skin Detection Camera</string>
    <string name="userGreeting">Let\'s take care of your skin!</string>
    <string name="userNameGreeting">Hello %1$s</string>
    <string name="skinDescPart">Know Your Skin</string>
    <string name="articleTitle">Improve Your Daily Skincare for Radiant, Glowing Skin!</string>
    <string name="articleImageDesc">Article Image</string>
    <string name="backAlert">Press back again to exit</string>
    <string name="placeholder">placeholder</string>
    <string name="productDescPart">Explore Product Recommendations</string>
    <string name="productImageDesc">Product Image</string>
    <string name="categoryNormal">Normal</string>
    <string name="categoryOily">Oily</string>
    <string name="categoryDry">Dry</string>
    <string name="categoryAcne">Acne</string>
    <string name="categoryDescPart">Category</string>
    <string name="capture_button">Take A picture Button</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="back_home">back to homepage</string>
    <string name="permission_not_granted">failed to access camera</string>
    <string name="takeApicTutorial">Make sure when taking pictures your face is clearly visible.</string>
    <string name="takeApicTutorialDescription">Please take pictures of the entire face</string>
    <string name="done">Okay</string>
    <string name="preview_image">Preview Image</string>
    <string name="resultTitle">Your Skin Result</string>
    <string name="message_validation">Fill all the fields!</string>
    <string name="login_success_message">Login Success</string>
    <string name="empty_article">Article not found</string>
    <string name="empty_skins">Skin data not found</string>
    <string name="empty_product">Product data not found</string>
    <string name="logout">logout</string>
    <string name="register_success_message">Register Success</string>
    <string name="logout_success">Logout Success</string>
    <string name="descPlaceholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eleifend, odio id fermentum venenatis, ligula elit dictum libero, ac placerat neque mi sit amet augue. Fusce eget nunc vitae lectus fermentum posuere. Integer non orci eu tortor vehicula tincidunt. Nullam tincidunt velit et dui faucibus, id posuere eros iaculis. Mauris sed eros ut justo tincidunt tincidunt. Cras ac lacinia purus. Vestibulum tincidunt,</string>
    <string name="starDesc">star Rating</string>
    <string name="locationPlaceholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eleifend, odio id fermentum venenatis, ligula elit dictum libero, ac placerat neque mi sit amet augue. Fusce eget nunc vitae lectus fermentum</string>
    <string name="productDetailPrice">Rp %1$s</string>
    <string name="no_network_message">No network available. Please check your internet connection and try again.</string>
    <string name="detailSkinTitle">Skin Type :</string>
    <string name="moreInformationTitle">More Information :</string>
    <string name="linkText"><u>%1$s</u></string>
    <string name="productDescTitle">Description Product</string>
    <string name="empty_image_warning">Select an image first</string>
    <string name="cameraInstruction">Make sure your face is clearly visible to the camera, then press the scan button to take a picture</string>
    <string name="infoBtnDesc">Contains camera usage information</string>
    <string name="startedBtnText">Join Now</string>
    <string name="introGreeting">Let\'s get started</string>
    <string name="introDesc">Unlock the secrets to radiant, healthy skin with Glowfy. Our app offers personalized skincare solutions tailored just for you.</string>
    <string name="joinInfoBtn">Join Now</string>
    <string name="loginDesc">Already Have Account?</string>
    <string name="deleteSuccess">History deleted successfully</string>
    <string name="skinTypeDesc">%1$s Skin</string>
    <string name="clinicDescPart">Check the health facilities around you</string>
    <string name="userLocation">Your Location</string>
    <string name="longPlaceHolder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada. Nullam ac erat ante. Nullam ultricies ligula sit amet nulla consequat, vel venenatis elit dapibus. Suspendisse potenti. Praesent tincidunt, risus at feugiat congue, lacus lorem laoreet libero, a placerat lorem nulla nec nisi. Sed varius posuere diam, a dictum urna interdum at. Integer gravida, sem et auctor fermentum, ex justo egestas erat, nec varius sapien enim ac odio.\n\nSed interdum euismod dolor, vel vehicula orci luctus nec. Curabitur tempor, mauris nec venenatis laoreet, nisl ligula convallis nulla, eget hendrerit massa urna at odio. In eget nisi nec nulla pretium malesuada. Fusce eget est leo. Donec sed velit sed mauris dapibus efficitur at nec nisi. Nam vestibulum lacus ut nisi tincidunt, a feugiat mi malesuada. Ut cursus velit a sem bibendum, et hendrerit magna ullamcorper.\n\nFusce varius justo a lorem posuere, sit amet accumsan lorem porttitor. Aenean nec felis leo. Aliquam erat volutpat. Integer maximus scelerisque tortor, non condimentum lectus pretium et. Maecenas sagittis, est nec molestie sollicitudin, eros velit vehicula leo, id posuere nunc lacus eu lorem. Nam et risus sed velit faucibus placerat. Pellentesque ac neque eu libero lacinia dapibus non ut leo. Nam dictum urna eget eros volutpat, sed vestibulum eros iaculis. Quisque eget consequat enim. Donec blandit lacus id leo convallis, a luctus lectus malesuada. Morbi nec lorem sed turpis tincidunt vehicula. Sed in fermentum lorem. Aenean sodales sapien at mauris congue, id fermentum ex auctor. Curabitur imperdiet risus quis sem convallis, nec molestie libero placerat. Aenean nec metus auctor, volutpat nisl at, lacinia ligula.</string>
    <string name="linkBuyBtn">Get it now</string>
    <string name="profile_setting">Customize Profile</string>
    <string name="logout_setting">Logout Account</string>
    <string name="history_setting">Scan History</string>
    <string name="resultSkinTypeText">%1$s Skin</string>
    <string name="resultSkinText">%1$s</string>
    <string name="scanDateResultTv">Scan Date :</string>
    <string name="email_icon_description">email input layout icon</string>
    <string name="registerDesc">Not a member?</string>
    <string name="successRegisterMessage">Yeay!, you have successfully joined\nplease continue logging in</string>
    <string name="continueLogin">Continue</string>
    <string name="register_error_message">Upss, there\'s a trouble when register, please try again</string>
    <string name="loginGreetHead">Welcome Back!</string>
    <string name="loginGreetDesc">Log in to discover a journey for glowing skin.</string>
    <string name="registerGreetDesc">Join us to start your personalized skincare journey today.</string>
    <string name="registerGreetHead">Hello, Ready to Glow?</string>
    <string name="saveChangeProfile">Save Changes</string>
    <string name="changeProfileImage">Change Image</string>
    <string name="historyPageTitle">SCAN HISTORY</string>
    <string name="editProfileTitle">PROFILE SETTING</string>
    <string name="locationNeed">Upss, looks like you haven\'t turn on the location</string>
    <string name="turnLocation">Location Setting</string>
    <string name="cancelTurnLocation">Cancel</string>
    <string name="scanText">Pindai</string>
    <string name="retakeText">Retake</string>
    <string name="notifTitle">Daily Reminder</string>
    <string name="notifContent">It\'s time to glow! Check your skincare routine and tips for today.</string>
    <string name="splashText">GLOWFY</string>
    <string name="retakeTitle">Make sure your face is clearly visible in the preview section</string>
    <string name="error_no_network">No network available</string>
    <string name="error_timeout">Request timed out. Please try again later.</string>
    <string name="error_network">Network error occurred. Please check your connection and try again.</string>
    <string name="error_general">An error occurred</string>
    <string name="errorPass">Password Must Have a Minimum of 6 Characters</string>
    <string name="errorEmail">Enter A Valid Email</string>
    <string-array name="slide_titles">
        <item>Welcome to Glowfy, Your Personal Skincare Companion!</item>
        <item>Discover Products Perfectly Matched to Your Skin!</item>
        <item>Uncover Your Unique Skin Type with Our Advanced Detection Technology!</item>
        <item>Locate Top Skincare Clinics Near You!</item>
        <item>Experience Hassle-Free Shopping with Our Curated Selections!</item>
    </string-array>
    <string-array name="slide_descriptions">
        <item>Unlock Your Skin\’s Potential and Discover Your Glow</item>
        <item>Receive personalized product suggestions to achieve your skincare goals.</item>
        <item>Get accurate insights and tailored skincare recommendations just for you.</item>
        <item>Find expert skincare professionals conveniently located in your area.</item>
        <item>Access top-quality skincare products with the assurance of credibility and trustworthiness.</item>
    </string-array>
    <string name="skin_normal">Normal</string>
    <string name="skin_dry">Dry</string>
    <string name="skin_oily">Oily</string>
    <string name="skin_acne">Acne</string>
    <string name="language_setting">Change Language</string>
    <string name="skincare_tips">Skincare Tips</string>
    <string name="skin_analysis">Face Skin Analysis</string>
    <string name="history_skin_analysis">History Skin Analysis</string>
    <string name="image_desc">iconTipsSkin</string>
    <string name="tipsTitle"><![CDATA[Tips & Trick]]></string>
    <string name="swipeForLocation">Swipe down to reload the map</string>
    <string-array name="skinTypeTips">
        <item>Normal Skin Tips</item>
        <item>Oily Skin Tips</item>
        <item>Dry Skin Tips</item>
        <item>Acne Skin Tips</item>
    </string-array>
    <string-array name="tipsDesc">
        <item>Normal skin typically requires regular moisturizing and cleansing to maintain its balance.</item>
        <item>Oily skin requires extra cleansing to control oil production.</item>
        <item>Dry skin needs intensive moisturizing and non-irritating skincare.</item>
        <item>Acne-prone skin requires specialized treatment to reduce inflammation and prevent new breakouts.</item>
    </string-array>
</resources>