<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color_welcome_alt"
    tools:context=".view.auth.RegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="32dp"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation_register"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/darkGreen"
                android:text="@string/registerGreetHead"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/darkGreen"
                android:text="@string/registerGreetDesc"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameEtLayout"
                style="@style/RoundedCorner"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_username"
                app:startIconContentDescription="@string/email_icon_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:paddingStart="50dp"
                    android:textColorHint="@color/darkGreen"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEtLayout"
                style="@style/RoundedCorner"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconContentDescription="@string/email_icon_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:paddingStart="50dp"
                    android:textColorHint="@color/darkGreen"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passEtLayout"
                style="@style/RoundedCorner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:paddingStart="50dp"
                    android:textColorHint="@color/darkGreen"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register"/>

            <LinearLayout
                android:id="@+id/loginDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans"
                    android:text="@string/have_account"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/toLoginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans"
                    android:layout_marginStart="4dp"
                    android:text="@string/to_login"
                    android:textAlignment="center"
                    android:textColor="@color/darkGreen"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

        <include
            android:id="@+id/loadingFrame"
            layout="@layout/layout_loading"
            android:visibility="gone"
            tools:visibility="visible"/>

    </FrameLayout>

</ScrollView>
