<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.home.fragments.ProductFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/greetingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/productDescPart"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/categoryDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/categoryDescPart"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greetingLayout" />

        <HorizontalScrollView
            android:id="@+id/categorySv"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/categoryDesc">

            <RadioGroup
                android:id="@+id/categoryRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/normalBtn"
                    style="@style/ClickableRadioButton"
                    android:checked="true"
                    android:text="@string/categoryNormal" />

                <RadioButton
                    android:id="@+id/oilyBtn"
                    style="@style/ClickableRadioButton"
                    android:text="@string/categoryOily" />

                <RadioButton
                    android:id="@+id/dryBtn"
                    style="@style/ClickableRadioButton"
                    android:text="@string/categoryDry" />

                <RadioButton
                    android:id="@+id/acneBtn"
                    style="@style/ClickableRadioButton"
                    android:text="@string/categoryAcne" />

            </RadioGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productCategoryRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="?attr/actionBarSize"
            app:layout_constraintTop_toBottomOf="@id/categorySv"
            tools:listitem="@layout/item_product_category"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
