<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color_welcome_alt"
    tools:context=".view.auth.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp">

        <LinearLayout
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation_greeting"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/darkGreen"
                android:text="@string/loginGreetHead"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/darkGreen"
                android:text="@string/loginGreetDesc"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEtLayout"
                style="@style/RoundedCorner"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconContentDescription="@string/email_icon_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:paddingStart="50dp"
                    android:textColorHint="@color/darkGreen"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passEtLayout"
                style="@style/RoundedCorner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:paddingStart="50dp"
                    android:textColorHint="@color/darkGreen"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:text="@string/registerDesc"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/toRegisterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:layout_marginStart="4dp"
                android:text="@string/to_register"
                android:textAlignment="center"
                android:textColor="@color/darkGreen"
                android:textSize="16sp"/>

        </LinearLayout>

    </RelativeLayout>

    <include
        android:id="@+id/loadingFrame"
        layout="@layout/layout_loading"
        android:visibility="gone"
        tools:visibility="visible"/>

</FrameLayout>